--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -226,15 +226,19 @@ footer {
 }
 /* MOBILE VIEW FOR OVERLAY */
 @media (max-width: 768px) {
+  .overlay {
+    column-gap: 0;
+  }
   .overlay .results {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr 1fr auto;
   }
   .overlay h2 {
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
   }
   .overlay .card {
     grid-column: 1 / 3;
+    justify-self: center;
   }
   .messages {
     margin-left: 0;
